oc-manifests/currency/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  selector:
    app: currency-service
  ports:
  - port: 5000
    targetPort: 5000
