oc-manifests/currency/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: currency-route
spec:
  to:
    kind: Service
    name: currency-service
  port:
    targetPort: 5000
